@@ -30,7 +30,7 @@ WRAPPERS_OPENMP += omp_wrapper.c omp_wrapper.h
 if WANT_OPENMP_INTEL
 WRAPPERS_OPENMP += intel-kmpc-11.c intel-kmpc-11.h intel-kmpc-11-intermediate/intel-kmpc-11-intermediate.h
 EXTRA_OPENMP_CFLAGS += -DINTEL_OPENMP
-WRAPPERS_INTEL_KMPC_11 = intel-kmpc-11-intermediate/libintel-kpmc-11-intermediate.la
+WRAPPERS_INTEL_KMPC_11 = intel-kmpc-11-intermediate/libintel-kmpc-11-intermediate.la
 endif # WANT_OPENMP_INTEL
 
 if WANT_OPENMP_GNU
