@@ -1,8 +1,8 @@
 include $(top_srcdir)/PATHS
 
-noinst_LTLIBRARIES = libintel-kpmc-11-intermediate.la
+noinst_LTLIBRARIES = libintel-kmpc-11-intermediate.la
 
-libintel_kpmc_11_intermediate_la_SOURCES = intel-kmpc-11-intermediate-part1.c intel-kmpc-11-intermediate-part2.c intel-kmpc-11-intermediate-part3.c intel-kmpc-11-intermediate-part4.c intel-kmpc-11-intermediate-part5.c intel-kmpc-11-intermediate-part6.c intel-kmpc-11-intermediate-part7.c intel-kmpc-11-intermediate-part8.c intel-kmpc-11-intermediate-part9.c  
-libintel_kpmc_11_intermediate_la_CFLAGS = -Wno-unused-function -I$(INCLUDE_DIR) -I$(WRAPPERS_DIR)/API -I$(WRAPPERS_DIR)/OMP -I$(CLOCKS_DIR) -I$(TRACER_DIR) -I$(COMMON_DIR) -I$(HWC_DIR)
+libintel_kmpc_11_intermediate_la_SOURCES = intel-kmpc-11-intermediate-part1.c intel-kmpc-11-intermediate-part2.c intel-kmpc-11-intermediate-part3.c intel-kmpc-11-intermediate-part4.c intel-kmpc-11-intermediate-part5.c intel-kmpc-11-intermediate-part6.c intel-kmpc-11-intermediate-part7.c intel-kmpc-11-intermediate-part8.c intel-kmpc-11-intermediate-part9.c  
+libintel_kmpc_11_intermediate_la_CFLAGS = -Wno-unused-function -I$(INCLUDE_DIR) -I$(WRAPPERS_DIR)/API -I$(WRAPPERS_DIR)/OMP -I$(CLOCKS_DIR) -I$(TRACER_DIR) -I$(COMMON_DIR) -I$(HWC_DIR)
 
-EXTRA_DIST = $(libintel_kpmc_11_intermediate_la_SOURCES)
+EXTRA_DIST = $(libintel_kmpc_11_intermediate_la_SOURCES)
